[package]
name = "toriage"
version = "0.1.0"
authors = ["Takayuki Nakata <f.seasons017@gmail.com>"]
edition = "2018"

[dependencies]
tera = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ghrs = "0.1.1"
keiro = { git = "https://github.com/giraffate/keiro" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"]}
url = "2.2.1"
